Initial user registration with web UI

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -38,7 +38,7 @@
 <script src="services/user.service.js"></script>
 
 <!--&lt;!&ndash; Fake user service for demo that uses local storage &ndash;&gt;-->
-<script src="services/user.service.local-storage.js"></script>
+<!--<script src="services/user.service.local-storage.js"></script>-->
 
 <!--<script src="js/home/home.controller.js"></script>-->
 <script src="login/login.controller.js"></script>
