--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -40,7 +40,7 @@
 <!--&lt;!&ndash; Fake user service for demo that uses local storage &ndash;&gt;-->
 <!--<script src="services/user.service.local-storage.js"></script>-->
 
-<!--<script src="js/home/home.controller.js"></script>-->
+<script src="home/home.controller.js"></script>
 <script src="login/login.controller.js"></script>
 <script src="register/register.controller.js"></script>
 </body>
